<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:theme="@style/XYTheme"
    tools:context="network.xyo.ble.sample.activities.XYOFinderDeviceActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"

            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabMode="scrollable">

            <android.support.design.widget.TabItem
                android:id="@+id/tabGeneral"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabAlert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alert" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabBattery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/battery" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabGap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gap" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabGatt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gatt" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabLinkLoss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/linkloss" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabTx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tx" />

        </android.support.design.widget.TabLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <ProgressBar
        android:id="@+id/progress_spinner"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        android:visibility="gone" />

</android.support.design.widget.CoordinatorLayout>