<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:tag="0"
    android:theme="@style/XYTheme">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/advertising_mode_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/advertising_mode_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <RadioGroup
                android:id="@+id/advertising_mode_selector"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/advertising_mode_selector_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/advertising_mode_selector_1" />

                <RadioButton
                    android:id="@+id/advertising_mode_selector_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/advertising_mode_selector_2" />

                <RadioButton
                    android:id="@+id/advertising_mode_selector_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/advertising_mode_selector_3" />

                <RadioButton
                    android:id="@+id/advertising_mode_selector_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/none" />
            </RadioGroup>

            <TextView
                android:id="@+id/advertising_power_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/advertising_power_title"
                android:paddingTop="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <RadioGroup
                android:layout_width="match_parent"
                android:id="@+id/advertising_power_selector"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/advertising_power_selector_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/advertising_power_selector_1" />

                <RadioButton
                    android:id="@+id/advertising_power_selector_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/advertising_power_selector_2" />

                <RadioButton
                    android:id="@+id/advertising_power_selector_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/advertising_power_selector_3" />

                <RadioButton
                    android:id="@+id/advertising_power_selector_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/advertising_power_selector_4" />

                <RadioButton
                    android:id="@+id/advertising_power_selector_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/none" />
            </RadioGroup>

            <TextView
                android:id="@+id/connectable_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connectable_title"
                android:paddingTop="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <RadioGroup
                android:id="@+id/connectable_selector"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/connectable_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_true" />

                <RadioButton
                    android:id="@+id/connectable_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_false" />

                <RadioButton
                    android:id="@+id/connectable_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/none" />

            </RadioGroup>

            <TextView
                android:id="@+id/timeout_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timeout_title"
                android:paddingTop="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <EditText
                android:id="@+id/timeout_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:id="@+id/include_device_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/include_device_name_title"
                android:paddingTop="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/include_device_name_selector">

                <RadioButton
                    android:id="@+id/include_device_name_selector_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_true" />

                <RadioButton
                    android:id="@+id/include_device_name_selector_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_false" />

                <RadioButton
                    android:id="@+id/include_device_name_selector_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/none" />
            </RadioGroup>

            <TextView
                android:id="@+id/include_tx_power_level_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/include_tx_power_level_title"
                android:paddingTop="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <RadioGroup
                android:layout_width="match_parent"
                android:id="@+id/include_tx_power_level_selector"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/include_tx_power_level_selector_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_true" />

                <RadioButton
                    android:id="@+id/include_tx_power_level_selector_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_false" />

                <RadioButton
                    android:id="@+id/include_tx_power_level_selector_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/none" />
            </RadioGroup>

            <TextView
                android:id="@+id/primary_service_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/primary_service_title"
                android:paddingTop="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <EditText
                android:id="@+id/primary_service_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text" />

            <TextView
                android:id="@+id/primary_service_data_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/primary_service_data_title"
                android:paddingTop="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <EditText
                android:id="@+id/primary_service_data_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text" />

            <TextView
                android:id="@+id/manufacturer_id_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/manufacturer_id_title"
                android:paddingTop="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <EditText
                android:id="@+id/manufacturer_id_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:id="@+id/manufacturer_data_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/manufacturer_data_title"
                android:paddingTop="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <EditText
                android:id="@+id/manufacturer_data_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text" />

            <Button
                android:id="@+id/update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>